# microservice-labs

./: README.md
homework-1-fastapi/: .dockerignore  .env.example  Makefile  README.md  alembic.ini  pyproject.toml  video_link.txt
homework-1-fastapi/benchmark/: README.md  bench_async.py  bench_common.py  bench_sync.py  locustfile.py
homework-1-fastapi/deploy/compose/: docker-compose.yml
homework-1-fastapi/deploy/docker/: Dockerfile  entrypoint.sh
homework-1-fastapi/docs/: design_notes.md  di_vs_no_di.md
homework-1-fastapi/load/: locustfile.py
homework-1-fastapi/migrations/: env.py
homework-1-fastapi/migrations/versions/: 0001_initial_schema.py
homework-1-fastapi/notebooks/: api_demo.ipynb
homework-1-fastapi/report/: .gitignore  00-metadata.md  01-bai-tap-1.md  02-bai-tap-2.md  03-bai-tap-3.md  04-tu-danh-gia.md
homework-1-fastapi/requirements/: UDPT2026 Bài tập 1.md
homework-1-fastapi/scripts/: seed_data.py
homework-1-fastapi/src/app/: main.py
homework-1-fastapi/src/app/api/: deps.py
homework-1-fastapi/src/app/api/v1/: router.py
homework-1-fastapi/src/app/api/v1/routes/: courses.py  enrollments.py  offerings.py  students.py  terms.py
homework-1-fastapi/src/app/api/v2/: router.py
homework-1-fastapi/src/app/api/v2/routes/: students.py
homework-1-fastapi/src/app/core/: config.py  logging.py  problems.py
homework-1-fastapi/src/app/db/: session.py
homework-1-fastapi/src/app/models/: __init__.py  base.py  course.py  enrollment.py  idempotency.py  offering.py  student.py  term.py
homework-1-fastapi/src/app/repositories/: course.py  enrollment.py  idempotency.py  offering.py  student.py  term.py
homework-1-fastapi/src/app/schemas/: common.py  course.py  enrollment.py  offering.py  student.py  term.py
homework-1-fastapi/src/app/services/: course.py  enrollment.py  offering.py  student.py  term.py
homework-1-fastapi/src/web/: __init__.py  academics.py  api_client.py  config.py  deps.py  main.py  templating.py  views.py
homework-1-fastapi/src/web/routes/: actions.py  pages.py
homework-1-fastapi/src/web/static/: app.css
homework-1-fastapi/src/web/templates/: _register_content.html  _switcher_results.html  _transcript_list.html  base.html  dashboard.html  register.html  schedule.html  transcript.html
homework-1-fastapi/tests/: conftest.py
homework-1-fastapi/tests/integration/: test_api.py
homework-1-fastapi/tests/unit/: test_student_service.py
lab-1-springboot/: .dockerignore  .gitignore  Makefile  README.md  pom.xml
lab-1-springboot/course-service/: pom.xml
lab-1-springboot/course-service/src/main/resources/: application.yml
lab-1-springboot/deploy/compose/: docker-compose.yml
lab-1-springboot/deploy/docker/: Dockerfile
lab-1-springboot/deploy/docker/certs/: .gitignore
lab-1-springboot/discovery-server/: pom.xml
lab-1-springboot/discovery-server/src/main/resources/: application.yml
lab-1-springboot/docs/: design_notes.md
lab-1-springboot/enrollment-service/: pom.xml
lab-1-springboot/enrollment-service/src/main/resources/: application.yml
lab-1-springboot/report/: 00-metadata.md  01-kien-truc.md  02-eureka-feign.md  03-luong-xu-ly.md  04-to-chuc-minh-chung.md
lab-1-springboot/requirements/: BTTH 01 - Tạo service.md
lab-1-springboot/student-service/: pom.xml
lab-1-springboot/student-service/src/main/resources/: application.yml
lab-1-springboot/web-client/: pom.xml
lab-1-springboot/web-client/src/main/resources/: application.yml
(+76 files in other folders)
