[project]
name = "enrollment-api"
version = "0.1.0"
description = "Student course-enrollment REST API (FastAPI + Postgres) — UDPT2026 homework 1"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "faker>=25",
]

[project.optional-dependencies]
# BT3 web client (server-rendered Jinja2 + HTMX). It is a separate FastAPI
# service that consumes the JSON API over HTTP via httpx — no DB access.
web = [
    "jinja2>=3.1",
    "httpx>=0.27",
]
# BT1 sync contender: Flask + gunicorn + psycopg2 (the sync driver blocks a
# worker during I/O — the whole point of the test). Baked into the image so the
# bench-sync container can run it. The async contender reuses the main deps;
# Locust runs from its own official container.
bench = [
    "flask>=3.0",
    "gunicorn>=22.0",
    "psycopg2-binary>=2.9",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/web"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Keep the explicit Generic[T] form for the Pydantic generic (PEP 695 generics
# on Pydantic models are avoided here).
ignore = ["UP046"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom relies on calls in argument defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Path",
]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
